RESOLVED FIXED267192
SVG element is not displayed if it is inside a <switch> element and it has an SVGFilter resource
https://bugs.webkit.org/show_bug.cgi?id=267192
Summary SVG element is not displayed if it is inside a <switch> element and it has an...
Ahmad Saleem
Reported 2024-01-06 18:25:58 PST
Hi Team, I know I know, it is vague title for bug but I am still thought to at least raise it so we can track for future. SVG Image Link - https://ikgp.de/wp-content/uploads/2023/12/Anmeldung_5_oS-1.svg It does not load in Safari 17.2.1 & Safari Technology Preview 185 but load fine in Chrome Canary 122 and Firefox Nightly 123. Twitter (X) link (from where this example comes) - https://x.com/AaronDewes/status/1743737956815237264 Just wanted to raise it now before it goes away in timeline etc. Thanks!
Attachments
reduced test case (326 bytes, image/svg+xml)
2024-01-09 12:12 PST, Said Abou-Hallawa
no flags
Ahmad Saleem
Comment 1 2024-01-06 18:48:03 PST
GOOD NEWS! Just to flag - Layer Based SVG Engine display the image on WebKit ToT (local build - 272741@main). Although it does not have 'shadow' effect on top of image like Chrome Canary 122. Still something to fix in LBSE, so adding `LayerBasedSVGEngine` as well.
Simon Fraser (smfr)
Comment 2 2024-01-08 12:55:50 PST
Related to the <filter>
Radar WebKit Bug Importer
Comment 3 2024-01-09 12:02:16 PST
Said Abou-Hallawa
Comment 4 2024-01-09 12:11:16 PST
Said Abou-Hallawa
Comment 5 2024-01-09 12:12:33 PST
Created attachment 469347 [details] reduced test case
EWS
Comment 6 2024-01-09 17:20:39 PST
Committed 272831@main (df6e4e277baa): <https://commits.webkit.org/272831@main> Reviewed commits have been landed. Closing PR #22549 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.