SVG element is not displayed if it is inside a <switch> element and it has an SVGFilter resource https://bugs.webkit.org/show_bug.cgi?id=267192 rdar://120732837

Reviewed by Simon Fraser.

Allow SVGFilter as a resource to the <switch> element. The <switch> element is a
container element which is similar to <a>, <g> and <use> elements. They all create
LegacyRenderSVGTransformableContainer as their renderers.

* LayoutTests/svg/filters/filter-target-switch-element-expected.svg: Added.
* LayoutTests/svg/filters/filter-target-switch-element.svg: Added.
* Source/WebCore/rendering/svg/SVGResources.cpp:
(WebCore::clipperFilterMaskerTags):

Canonical link: https://commits.webkit.org/272831@main